[gd_scene load_steps=5 format=3 uid="uid://brec14f0yf1mg"]

[ext_resource type="Script" path="res://Assets/Spells/BaseSpell.gd" id="1_dt5t7"]
[ext_resource type="Script" path="res://Assets/Spells/Trail.gd" id="2_ppqx6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uo8hf"]
radius = 21.0238

[sub_resource type="Curve" id="Curve_xd0uq"]
_data = [Vector2(0, 0), 0.0, 0.32347, 0, 0, Vector2(1, 1), 0.574733, 0.0, 0, 0]
point_count = 2

[node name="BaseSpell" type="Node2D" groups=["Spell"]]
script = ExtResource("1_dt5t7")

[node name="Sprite" type="Polygon2D" parent="."]
scale = Vector2(1.46667, 1.46667)
polygon = PackedVector2Array(-6, -5, -7, 1, -15, 6, -7, 7, -5, 16, -3, 7, 8, 12, 1, 7, 7, 7, 12, 5, 15, 2, 14, -5, 11, 1, 6, 1, 11, -7, 7, -12, -5, -16, 5, -11, -6, -11, 4, -8, -14, -8, -5, -7, -12, -4, -15, 0, -11, 1, -12, -1, -10, -3)

[node name="Hitbox" type="Area2D" parent="." groups=["Spell"]]
collision_layer = 8
collision_mask = 47

[node name="HitArea" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_uo8hf")

[node name="Trail" type="Line2D" parent="."]
z_index = -1
width = 20.0
width_curve = SubResource("Curve_xd0uq")
default_color = Color(1, 1, 1, 0.737255)
script = ExtResource("2_ppqx6")
trail_length = 30

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
